--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
     <head>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="/src/main.css">
         <script src="/dist/bundle.js"></script>
     </head>
 
     <body>
-        <p> hi world </p>
         <div id="content"></div>
     </body>
 </html>
