--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/src/main.css">
-        <script src="/dist/bundle.js"></script>
+        <script src="/dist/client.js"></script>
     </head>
 
     <body>
